Fix result image overflowing parent div

--- a/school/static/school/school.css
+++ b/school/static/school/school.css
@@ -141,6 +141,11 @@ body {
 
 .results-box-results_image {
     margin-left: 1em;
+    margin-right: 1em;
+}
+
+.results-box-results_image img {
+    max-width: 100%;
 }
 
 .results-box-delete a {
